--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ legacy_tox_ini = """
 envlist = py37
 
 [testenv]
+setenv = PYTHONPATH = {toxinidir}
 deps =
     pytest==6.0.1
     pytest-asyncio==0.14.0
